CSS - stile generale della pagina e dell'Header impostati

--- a/index.html
+++ b/index.html
@@ -45,9 +45,19 @@
 
 </head>
 <body>
+  <div class="wrapper" id="roots">
+    <header>
+      <div class="logo-box">
+        <h1>NEFFLIS</h1>
+      </div>
+      <div class="search-box">
+        <input id="movie-search" type="text" value="" placeholder="-Che film vuoi vedere oggi?-">
+      </div>
+    </header>
+    <main>
 
-  <h1>NEFFLIS</h1>
-
+    </main>
+  </div>
   <!-- main script -->
   <script src="js/script.js" charset="utf-8"></script>
   <!-- /main script -->
