CSS - HTML / Schema template riprodotto
Da aggiustare

--- a/index.html
+++ b/index.html
@@ -55,7 +55,21 @@
       </div>
     </header>
     <main>
-
+      <div class="container">
+        <div class="template">
+            <div class="poster-box">
+              <img class="poster" src="https://via.placeholder.com/300x400" alt="">
+            </div>
+            <div class="info-box">
+              <h2 class="title">Ciccio</h2>
+              <h3 class="original-title">The Citch</h3>
+              <h3 class="lang">inglish</h3>
+            </div>
+            <div class="rating-box">
+              <h4>4 su 5</h4>
+            </div>
+        </div>
+      </div>
     </main>
   </div>
   <!-- main script -->
