JS - Trovato un sistema per visualizzare i voti come stelle; rivedere
Riesco a dimezzare i voti e arrotondarli per eccesso, prima di salvarli nella variabile Movies; dopo di che lavoro sugli indici di un array di voti per collegare i voti a stella con i voti numerici. Il problema è che non posso usare entity code né fontawesome, perché non me li interpreta da stringa a html.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p class="lang"><strong>Lingua: </strong>{{movie.original_language}}</p>
           </div>
           <div class="rating-box">
-            <p><strong>Voto Medio: </strong>{{movie.vote_average}}</p>
+            <p><strong>Voto Medio: </strong>{{ratings[movie.vote_average]}}</p>
             <p v-if="movie.overview==''"><strong>Sinossi: </strong><small>Non disponibile!</small></p>
             <p v-else><strong>Sinossi: </strong><small>{{movie.overview}}</small></p>
           </div>
