--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h1>NEFFLIS</h1>
       </div>
       <div class="search-box">
-        <input id="movie-search" v-model="searchQuery" @keyup.enter = "searchMovie" type="text" placeholder="- Che film vuoi vedere oggi? -">
+        <input id="movie-search" v-model="searchQuery" @keyup.enter = "searchMovie" type="text" placeholder="- Che cosa vuoi guardare oggi? -">
       </div>
     </header>
     <main>
@@ -97,7 +97,6 @@
             <p class="serie-text" v-else><strong><em>Sinossi: </em></strong><small>{{serie.overview}}</small></p>
           </div>
         </div>
-
       </div>
     </main>
   </div>
